Fixed line spacing for main paragraph styles.

--- a/static/css/my_style_mods.css
+++ b/static/css/my_style_mods.css
@@ -20,3 +20,31 @@ img[src$='#floatright']
     margin: 0.7rem;      /* this margin is totally up to you */
     /* whatever else styles you fancy here */
 }
+
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 12px;
+    text-transform: none;
+}
+
+h1 { font-size: 30px; }
+h2 { font-size: 26px; margin-top: 30px; }
+h3 { font-size: 20px; margin-top: 24px; }
+h4 { font-size: 18px; margin-top: 20px; }
+h5 { font-size: 16px; margin-top: 17px; }
+h6 { font-size: 14px; margin-top: 15px; }
+
+p {
+    line-height: 1.4;
+    margin: 12px 0 0;
+}
+
+ul, ol {
+    line-height: 1.4;
+    margin: 4px 0 0;
+}
+
+ul ul, ul ol, ol ul, ol ol { margin: 0 0 0 0; }
+
+ul li, ol li {
+    margin: 4px 0 0;
+}
